--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,131 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.jiguang.jpush">
     <application>
-        <!-- Required SDK 核心功能-->
-        <!-- 可配置 android:process 参数将 PushService 放在其他进程中 -->
-        <service
-            android:name="cn.jpush.android.service.PushService"
-            android:enabled="true"
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="cn.jpush.android.intent.REGISTER" />
-                <action android:name="cn.jpush.android.intent.REPORT" />
-                <action android:name="cn.jpush.android.intent.PushService" />
-                <action android:name="cn.jpush.android.intent.PUSH_TIME" />
-            </intent-filter>
-        </service>
-
-
-    <!-- since 3.0.9 Required SDK 核心功能-->
-        <provider
-            android:authorities="com.hlzt.commercial.DataProvider"
-            android:name="cn.jpush.android.service.DataProvider"
-            android:exported="true"
-        />
-
-        <!-- since 1.8.0 option 可选项。用于同一设备中不同应用的 JPush 服务相互拉起的功能。 -->
-        <!-- 若不启用该功能可删除该组件，或把 enabled 设置成 false ；App 不会被其他 App 拉起，但会拉起其他的 App。 -->
-         <service
-             android:name="cn.jpush.android.service.DaemonService"
-             android:enabled="true"
-             android:exported="true">
-             <intent-filter >
-                 <action android:name="cn.jpush.android.intent.DaemonService" />
-                 <category android:name="com.hlzt.commercial"/>
-             </intent-filter>
-         </service>
-
-         <!-- since 3.1.0 Required SDK 核心功能-->
-          <provider
-               android:authorities="com.hlzt.commercial.DownloadProvider"
-               android:name="cn.jpush.android.service.DownloadProvider"
-               android:exported="true"
-           />
-
-        <!-- Required SDK 核心功能-->
-        <receiver
-            android:name="cn.jpush.android.service.PushReceiver"
-            android:enabled="true" >
-          <intent-filter android:priority="1000">
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
-                <category android:name="com.hlzt.commercial"/>
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-            </intent-filter>
-            <!-- Optional -->
-            <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED" />
-                <action android:name="android.intent.action.PACKAGE_REMOVED" />
-                <data android:scheme="package" />
-            </intent-filter>
-        </receiver>
-
-        <!-- Required SDK 核心功能-->
-        <!-- 若您的业务中有使用极光富媒体功能，或者极光早上好功能，需要把此 Activity 的 exported 设置成 true。 -->
-        <activity
-            android:name="cn.jpush.android.ui.PushActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:theme="@android:style/Theme.NoTitleBar"
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="cn.jpush.android.ui.PushActivity" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="com.hlzt.commercial" />
-            </intent-filter>
-        </activity>
-        <!-- SDK 核心功能-->
-        <!-- 若您的业务中有使用极光富媒体功能，或者极光早上好功能，需要把此 Activity 的 exported 设置成 true。 -->
-        <activity
-            android:name="cn.jpush.android.ui.PopWinActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:exported="false"
-            android:theme="@style/MyDialogStyle">
-            <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="您应用的包名" />
-            </intent-filter>
-        </activity>
-
-        <!-- 注意此配置在 JPush 3.2.0 及以前版本是必须配置，3.2.0 以后版本已废弃此配置-->
-        <service
-            android:name="cn.jpush.android.service.DownloadService"
-            android:enabled="true"
-            android:exported="false" >
-        </service>
-
-        <!-- Required SDK 核心功能-->
-        <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
-
-        <!-- Required since 3.0.7 -->
-        <!-- 新的 tag/alias 接口结果返回需要开发者配置一个自定的广播 -->
-        <!-- 3.3.0开始所有事件将通过该类回调 -->
-        <!-- 该广播需要继承 JPush 提供的 JPushMessageReceiver 类, 并如下新增一个 Intent-Filter -->
-        <!-- <receiver
-            android:name="自定义 Receiver"
-            android:enabled="true" 
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
-                <category android:name="com.hlzt.flutter_commercial_app" />
-            </intent-filter>
-        </receiver> -->
-
-        <!-- User defined. 用户自定义的广播接收器-->
-        <!-- 这是3.3.0之前版本的接收方式，3.3.0开始是通过继承 JPushMessageReceiver并配置来接收所有事件回调。-->
-        <!-- 如果仍然需要在这个Receiver里接收，需要在JPushMessageReceiver 的子类里不重写对应的回调方法，或者重写方法且调用super -->
-       
-
-        <!-- Required. For publish channel feature -->
-        <!-- JPUSH_CHANNEL 是为了方便开发者统计 APK 分发渠道。-->
-        <!-- 例如: -->
-        <!-- 发到 Google Play 的 APK 可以设置为 google-play; -->
-        <!-- 发到其他市场的 APK 可以设置为 xxx-market。 -->
-        <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
-        <!-- Required. AppKey copied from Portal -->
-        <meta-data android:name="JPUSH_APPKEY" android:value="fe779ee7a66692551d3fa742"/>
-
         <receiver
             android:name="com.jiguang.jpush.JPushPlugin$JPushReceiver"
             android:enabled="true"
@@ -137,14 +12,14 @@
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" />
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_CLICK_ACTION" />
                 <action android:name="cn.jpush.android.intent.CONNECTION" />
-                <category android:name="com.hlzt.commercial" />
+                <category android:name="${applicationId}" />
             </intent-filter>
         </receiver>
 
         <receiver android:name="com.jiguang.jpush.JPushEventReceiver">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
-                <category android:name="com.hlzt.commercial" />
+                <category android:name="${applicationId}" />
             </intent-filter>
         </receiver>
         <!-- Since JCore2.0.0 Required SDK核心功能-->
