--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.NoTitleBar"
+            tools:replace="android:exported"
             android:exported="false">
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
@@ -115,6 +116,7 @@
             android:name="cn.jpush.android.service.JNotifyActivity"
             android:exported="false"
             android:taskAffinity="jpush.custom"
+            tools:replace="android:exported"
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.JNotifyActivity" />
@@ -122,17 +124,17 @@
             </intent-filter>
         </activity>
 
-<!--        &lt;!&ndash; since 3.3.0 Required SDK 核心功能&ndash;&gt;-->
-<!--        &lt;!&ndash; 可配置android:process参数将PushService放在其他进程中 &ndash;&gt;-->
-<!--        &lt;!&ndash;User defined.  For test only 继承自cn.jpush.android.service.JCommonService&ndash;&gt;-->
-<!--        <service android:name="com.example.jpushdemo.PushService"-->
-<!--            android:process=":pushcore">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="cn.jiguang.user.service.action" />-->
-<!--            </intent-filter>-->
-<!--        </service>-->
-<!--        &lt;!&ndash; since 3.5.6 新增华硕通道  &ndash;&gt;-->
-<!--        <receiver android:name="cn.jpush.android.asus.AsusPushMessageReceiver"></receiver>-->
+        <!-- since 3.3.0 Required SDK 核心功能-->
+        <!-- 可配置android:process参数将PushService放在其他进程中 -->
+        <!--User defined.  For test only 继承自cn.jpush.android.service.JCommonService-->
+        <service android:name="com.example.jpushdemo.PushService"
+            android:process=":pushcore">
+            <intent-filter>
+                <action android:name="cn.jiguang.user.service.action" />
+            </intent-filter>
+        </service>
+        <!-- since 3.5.6 新增华硕通道  -->
+        <receiver android:name="cn.jpush.android.asus.AsusPushMessageReceiver"/>
         <!-- Required  . Enable it you can get statistics data with channel -->
         <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
         <meta-data android:name="JPUSH_APPKEY" android:value="fe779ee7a66692551d3fa742" /> <!--  </>值来自开发者平台取得的AppKey-->
@@ -142,7 +144,7 @@
         <receiver
             android:name="com.jiguang.jpush.JPushPlugin$JPushReceiver"
             android:enabled="true"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.REGISTRATION" />
                 <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" />
