--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ android/.settings/org.eclipse.buildship.core.prefs
 android/.settings/org.eclipse.jdt.core.prefs
 android/.settings/org.eclipse.buildship.core.prefs
 android/.project
+android/.settings/org.eclipse.buildship.core.prefs
