--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,10 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
+        flatDir {
+            dirs project(':jpush_flutter').file('libs')
+            // e.g. dirs project(':url_launcher').file('libs')  - don't miss the ':'
+        }
     }
 }
 
@@ -40,6 +44,7 @@ android {
 
 dependencies {
     compileOnly files('libs/flutter.jar')
-    compile files('libs/jcore-android-2.3.4-google_play.jar')
-    compile files('libs/jpush-android-3.6.0-google_play.jar')
+    compile files('libs/jcore-android-2.6.0-google_play.jar')
+    compile files('libs/jpush-android-3.9.1-google_play.jar')
+//    compile files('libs/jcore-android-2.6.0-debug-b48.jar')
 }
