--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,8 +44,6 @@ android {
 
 dependencies {
     compileOnly files('libs/flutter.jar')
-    compile files('libs/jcore-android-2.6.0-google_play.jar')
+    compile files('libs/jcore-android-2.7.8-debug-b69.jar')
     compile files('libs/jpush-android-3.9.1-google_play.jar')
-//    compile files('libs/jcore-android-2.3.4-google_play.jar')
-//    compile files('libs/jpush-android-3.6.0-google_play.jar')
 }
