--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -165,10 +165,10 @@
         <!-- Since JCore2.0.0 Required SDK核心功能-->
         <!-- 可配置android:process参数将Service放在其他进程中；android:enabled属性不能是false -->
         <!-- 这个是自定义Service，要继承极光JCommonService，可以在更多手机平台上使得推送通道保持的更稳定 -->
+<!--        android:process=":pushcore"-->
         <service android:name=".JPushCustomService"
             android:enabled="true"
-            android:exported="false"
-            android:process=":pushcore">
+            android:exported="false">
             <intent-filter>
                 <action android:name="cn.jiguang.user.service.action" />
             </intent-filter>
