--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ description: JIGUANG officially supported JPush Flutter plugin (Android & iOS). 
 version: 2.1.2
 # author: xudong.rao <xudong.rao@outlook.com>
 homepage: https://www.jiguang.cn
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
