build: jcore2.6.0->2.8.2, jpush3.9.1->4.1.5

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,5 @@ android/.settings/org.eclipse.jdt.core.prefs
 android/.settings/org.eclipse.buildship.core.prefs
 android/.project
 android/.settings/org.eclipse.buildship.core.prefs
+/example/ios/Flutter/flutter_export_environment.sh
+/example/.flutter-plugins-dependencies
