--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -112,17 +112,17 @@
         <receiver android:name="cn.jpush.android.service.SchedulerReceiver" android:exported="false"/>
 
         <!--since 3.3.0 Required SDK核心功能-->
-        <activity
-            android:name="cn.jpush.android.service.JNotifyActivity"
-            android:exported="false"
-            android:taskAffinity="jpush.custom"
-            tools:replace="android:exported"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar">
-            <intent-filter>
-                <action android:name="cn.jpush.android.intent.JNotifyActivity" />
-                <category android:name="${applicationId}" />
-            </intent-filter>
-        </activity>
+<!--        <activity-->
+<!--            android:name="cn.jpush.android.service.JNotifyActivity"-->
+<!--            android:exported="false"-->
+<!--            android:taskAffinity="jpush.custom"-->
+<!--            tools:replace="android:exported"-->
+<!--            android:theme="@android:style/Theme.Translucent.NoTitleBar">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="cn.jpush.android.intent.JNotifyActivity" />-->
+<!--                <category android:name="${applicationId}" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
         <!-- since 3.3.0 Required SDK 核心功能-->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
@@ -173,6 +173,18 @@
                 <action android:name="cn.jiguang.user.service.action" />
             </intent-filter>
         </service>
+        <activity
+                android:name="cn.jpush.android.service.JNotifyActivity"
+                android:exported="true"
+                android:taskAffinity="jpush.custom"
+                android:theme="@android:style/Theme.Translucent.NoTitleBar">
+
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.JNotifyActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="${applicationId}" />
+            </intent-filter>
+        </activity>
     </application>
     <uses-permission android:name="com.huawei.android.launcher.permission.CHANGE_BADGE"/>
 </manifest>
